--- a/css/styles.css
+++ b/css/styles.css
@@ -968,7 +968,7 @@ padding: 0 12px;
     transform: translate(-50%, -50%);
     
     opacity: 1;
-    transition: width opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn-icon {
