--- a/css/styles.css
+++ b/css/styles.css
@@ -955,70 +955,51 @@ padding: 0 12px;
 
 /* -----------------MODAL_______________ */
 
- 
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 528px;
-    min-height: 581px;
-    background: var(--primary-white-color);
-    box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
-    border-radius: 4px;
-    transform: translate(-50%, -50%);
-    
-    opacity: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-btn-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.backdrop {
+ .backdrop {
     position: fixed;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
     background: rgba(0, 0, 0, 0.2);
-    visibility: visible;
-    opacity: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) , visibility opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
-
-.backdrop.is.hidden {
+.backdrop.is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
 }
-
-
-.backdrop.is.hidden .modal {
-    width: 0;
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 528px;
+    min-height: 581px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
+    border-radius: 4px;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), min-height 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0);
+    min-height: 0;
+}
 .modal-close-btn {
     position: absolute;
     top: 8px;
     right: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 30px;
     height: 30px;
     padding: 0;
-    background: #ffffff;
+    background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
 }
-
 
 /* ----------PORTFOLIO */
 
@@ -1147,11 +1128,54 @@ border: 1px solid #EEEEEE;
 }
 
 .development-list {
-
+    
     gap: 30px;
     
+}
+
+.development-list:hover .development-top-text {
+    transform: translateY(0);
+}
+
+.development-top-wrap {
+position: relative;
+overflow: hidden;
+
+
+}
+
+.development-foto:hover .development-top-text,
+.development-foto:focus .development-top-text {
+    transform: translateY(0);
     
-    
+}
+
+.development-top-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-weight: 400;
+font-size: 18px;
+line-height: 1.55;
+
+letter-spacing: 0.03em;
+
+align-items: center;
+color: var(--primary-white-color);
+background: rgba(33, 150, 243, 0.9);
+
+padding-top: 63px;
+padding-right: 24px;
+padding-bottom: 63px;
+padding-left: 24px;
+
+height: 100%;
+width: 100%;
+
+transform: translateY(100%);
+transition: transform 250ms linear;
+
+
 }
 
 .development-list:nth-child(3n - 1) {
