--- a/css/styles.css
+++ b/css/styles.css
@@ -1060,6 +1060,8 @@ line-height: 1.62;
 letter-spacing: 0.03em;
 
 color: var(--main-title-color);
+
+
 }
 
 
@@ -1100,6 +1102,7 @@ padding-right: 22px;
 padding-bottom: 6px;
 padding-left: 22px; 
 
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .development-text {
