--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,33 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cub
     
 }
 
+.heaper-link {
+font-weight: 500;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.02em;
+
+color: #757575;
+align-items: center;
+
+
+position: relative;
+
+    display: flex;
+    
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+
+
+
+position: relative;
+
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
 .studio-title::after {
     content: "";
     width: 100%;
@@ -334,6 +361,11 @@ color: var(--second-title-color)
 
 }
 
+.heaper-link:hover,
+.heaper-link:focus {
+    color: var(--second-title-color);
+}
+
 .header-mail {
 
 font-weight: 500;
@@ -442,7 +474,7 @@ padding-left: 32px;
     margin: 0 auto;
     display: block;
 
-    transition: color var(--primary-white-color), background-color var(--second-title-color) ;
+    transition: color var(--primary-white-color), background-co var(--second-title-color) ;
 
 }
 
@@ -1159,7 +1191,7 @@ overflow: hidden;
 
 .development-top-text {
     position: absolute;
-    top: 0;
+    top: 1px;
     left: 0;
     font-weight: 400;
 font-size: 18px;
@@ -1180,7 +1212,7 @@ height: 100%;
 width: 100%;
 
 transform: translateY(100%);
-transition: transform 250ms linear;
+transition: transform var(--main-transition);
 
 
 }
