--- a/css/styles.css
+++ b/css/styles.css
@@ -130,8 +130,7 @@ button {
 
   position: relative;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link::after {
@@ -448,6 +447,24 @@ button {
   margin-bottom: 50px;
 }
 
+.work-foto-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+
+  padding: 27px 24px;
+  width: 100%;
+  background: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
 .about-list {
   text-decoration: none;
   width: 270px;
@@ -455,6 +472,7 @@ button {
 
 .work-foto {
   text-decoration: none;
+  position: relative;
 }
 
 /* -----------TEAM */
@@ -686,8 +704,7 @@ button {
 
   color: rgba(255, 255, 255, 0.6);
 
-  transition: color var(--main-transition),
-    background-color var(--main-transition);
+  transition: color var(--main-transition);
 }
 
 .address-tel {
@@ -733,8 +750,7 @@ button {
   border-radius: 50%;
   fill: currentColor;
 
-  transition: color var(--main-transition),
-    background-color var(--main-transition);
+  transition: background-color var(--main-transition);
 }
 .link {
 }
