--- a/css/styles.css
+++ b/css/styles.css
@@ -105,51 +105,29 @@ button {
   color: var(--second-title-color);
 }
 
-.title-studio:focus,
-.title-studio:hover {
-}
-
 .header-list {
   display: flex;
 }
 
 .header-link {
-  position: relative;
-
-  display: flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-
-  color: var(--main-title-color);
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-
-  position: relative;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: inherit;
 }
 
-.header-link::after {
+.current {
+  color: var(--second-title-color);
+  position: relative;
+}
+
+.current::after {
   content: "";
-
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-
   display: block;
   width: 100%;
   height: 4px;
-  background-color: var(--second-title-color);
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-link:hover::after {
-  opacity: 0;
+  background-color: currentColor;
+  border-radius: 2px;
+  position: absolute;
+  bottom: -33px;
+  left: 0;
 }
 
 .heaper-link {
@@ -172,18 +150,6 @@ button {
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.studio-title::after {
-  content: "";
-  width: 100%;
-  height: 4px;
-  background-color: var(--second-title-color);
-  display: block;
-  border-radius: 2px;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
 }
 
 /* ----------------CONNECT TEL MAIL------------- */
